# jortaskmanager

./: CURSOR_ANALYSIS_JSON.json  CYCLE_TRACKING_SETUP.md  PROJECT_SUMMARY_FOR_MACOS_CONVERSION.md  STRIPE_SETUP.md  activity_participants_table.sql  add_checklist_sharing_columns.sql  add_existing_user_free_plan.sql  add_fitness_end_time_column.sql  add_role_to_users_table.sql  ai_settings_migration.sql  baby_shower_tables.sql  check_all_triggers.sql  check_rls_policies.sql  check_trigger_functions.sql  check_triggers.sql  checklist_tables.sql  comprehensive_check.sql  credits_functions.sql  cycle_tracking_tables.sql  debug_trigger.sql  debug_triggers.sql  disable_all_triggers.sql  disable_all_triggers_simple.sql  disable_credits_trigger.sql  disable_problematic_triggers.sql  disable_trigger.sql  disable_trigger_completely.sql  ensure_users_rls_for_role.sql  fitness_activities_subtasks.sql  fix_peers_delete_rls.sql  fix_peers_rls_policy.sql  fix_signup_triggers.sql  fix_triggers_properly.sql  free_subscription_setup.sql  get_user_info_function.sql  leisure_activities_subtasks.sql  meal_planning_updates.sql  package-lock.json  package.json  peer_sync_tables.sql  (+11 more)
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/account/: page.tsx
app/ai-info/: page.tsx
app/ai-settings/: page.tsx
app/appointments/: page.tsx
components/: AIChat.tsx  TopNavBar.tsx  TopNavBarWrapper.tsx
hooks/: use-auth.tsx
lib/: supabaseClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/macos/: entitlements.mas.plist
src-tauri/src/: main.rs
types/: index.ts
(+55 files in other folders)
